--- a/HTML/style.css
+++ b/HTML/style.css
@@ -6,17 +6,17 @@
 
 
 body {
-    background-color: rgb(182, 176, 176);
+    background-color: rgb(196, 194, 194);
 }
 
 header {
-    background-color: rgb(156, 201, 216);
+    background-color: rgb(230, 137, 93);
     display: flex;
     justify-content:space-between;
 }
 
 h1 {
-    color: rgb(97, 90, 90);
+    color: rgb(255, 255, 255);
     font-size:40px;
     text-align: left;
     justify-content: space-between;
@@ -28,20 +28,20 @@ h2 {
     text-align: center;
     margin-bottom: 25px;
     text-transform:uppercase;
-    font-size: 32px;
+    font-size: 25px;
 }
 
 h3 {
     color: rgb(105, 96, 96);
-    font-size: 25px;
-    margin: 15px;
-    margin-bottom: 10px;
+    font-size: 20px;
+    margin: 5px;
+    margin-bottom: 5px;
 }
 
 h4 {
     color: rgb(105, 96, 96);
-    font-size: 20px;
-    margin: 10px;
+    font-size: 15px;
+    margin: 5px;
 }
 
 
@@ -64,11 +64,14 @@ margin: 25px;
 }
     
 p{
-margin: 10px;
+margin: 5px;
+font-size: 12px;
 }
 
 ul{
-margin: 5px;
+margin: 10px;
+margin-left: 15px;
+font-size: 12px;
 }
 
 .Competences ul {
@@ -76,6 +79,14 @@ margin: 5px;
 }
 
 .Competences img {
-    margin: 20px;
+    margin: 10px;
+    margin-bottom: 18px;
+}
+
+span {
+    margin-top: 10px;
+    color: white;
+    border: solid rgb(0, 0, 0);
+    background-color: black;
 }
 
